--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.datasource.url=jdbc:sqlserver://localhost:1433;databasename=account
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.username=sa
 spring.datasource.password=gaoxun520
+
+#¥Ú”°sql
+logging.level.com.example.demo.dao=debug
