投标信息系统的后台，基本上完整的版本

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,10 +8,10 @@ mybatis.configuration.map-underscore-to-camel-case=true
 ## -------------------------------------------------
 
 ## SqlServer ≈‰÷√
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databasename=account
+spring.datasource.url=jdbc:sqlserver://47.103.14.3:1433;databasename=account
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.username=sa
-spring.datasource.password=gaoxun520
+spring.datasource.password=gaoxun520.
 
 #¥Ú”°sql
 logging.level.com.example.demo.dao=debug
